<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.BantuanFragment"
    android:background="@color/colorLightGray"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/fragment_bantuan_header"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="200dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <TextView
                    android:id="@+id/title"
                    android:text="@string/pusat_bantuan"
                    android:fontFamily="@font/poppinsbold"
                    android:textColor="@color/colorSoftBlack"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:id="@+id/sub1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jika_anda_mengalami_gejala_gejala"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:id="@+id/sub2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seperti_ini"
                    android:textColor="@color/colorBlue"
                    android:layout_marginStart="4dp"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintStart_toEndOf="@+id/sub1"
                    app:layout_constraintBottom_toTopOf="@+id/sub3"/>

                <TextView
                    android:id="@+id/sub3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/silahkan_hubungi_kontak_di_bawah"
                    app:layout_constraintTop_toBottomOf="@id/sub1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_bantuan"
                    android:layout_marginTop="15dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/sub3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_informasi"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>