<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.KasusFragment"
    android:background="@color/colorLightGray"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/fragment_kasus_header"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="200dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_country">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/country"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/update_kasus_corona"
                android:textSize="20sp"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/colorSoftBlack"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tanggal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/update"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/update"
                app:layout_constraintEnd_toEndOf="@id/update"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_last_update"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/loading"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_lihat_detail"
                    android:text="@string/lihat_detail"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/colorBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:drawableEndCompat="@drawable/ic_right" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="15dp"
                android:elevation="16dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/tanggal"
                app:layout_constraintStart_toStartOf="@id/tanggal"
                app:layout_constraintEnd_toEndOf="@id/tanggal">

                <RelativeLayout
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="40dp"
                            android:layout_height="40dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:src="@color/bgColorKasusPositif"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:background="@drawable/ic_kasus_positif"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:layout_margin="10dp"
                                tools:ignore="ContentDescription" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tv_kasus_positif"
                            android:text="@string/empty"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/poppinsbold"
                            android:textColor="@color/colorOrange"
                            android:textSize="22sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:targetApi="jelly_bean" />

                        <TextView
                            android:text="@string/kasus_positif"
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="40dp"
                            android:layout_height="40dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:src="@color/bgColorSembuh"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:background="@drawable/ic_sembuh"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:layout_margin="10dp"
                                tools:ignore="ContentDescription" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tv_sehat"
                            android:text="@string/empty"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/poppinsbold"
                            android:textColor="@color/colorLightGreen"
                            android:textSize="22sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:targetApi="jelly_bean" />

                        <TextView
                            android:text="@string/sembuh"
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_alignParentEnd="true">

                        <RelativeLayout
                            android:layout_width="40dp"
                            android:layout_height="40dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:src="@color/bgColorMeninggal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:background="@drawable/ic_meninggal"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_centerInParent="true"
                                android:layout_margin="10dp"
                                tools:ignore="ContentDescription" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tv_meninggal"
                            android:text="@string/empty"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/poppinsbold"
                            android:textColor="@color/colorRed"
                            android:textSize="22sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:targetApi="jelly_bean" />

                        <TextView
                            android:text="@string/meninggal"
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/berita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/info"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/berita_penting"
                android:textSize="20sp"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/colorSoftBlack"/>

            <androidx.cardview.widget.CardView
                app:layout_constraintTop_toBottomOf="@+id/berita"
                app:layout_constraintStart_toStartOf="@id/berita"
                app:layout_constraintEnd_toEndOf="@id/berita"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_height="140dp"
                app:cardCornerRadius="15dp"
                android:elevation="16dp"
                android:layout_marginBottom="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/berita"
                        android:gravity="center"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorTransparentBlack" />

                    <Button
                        android:id="@+id/btn_berita"
                        android:background="@drawable/bg_map"
                        android:text="@string/lihat_detail"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:layout_centerInParent="true"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>